# wavefront-renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
gui/: image_loader.py  main.py  window.py
gui/render/: display.py  worker.py
gui/render/shaders/: fullscreen.frag  fullscreen.vert
include/: Camera.h  HitRecord.h  Image.h  Material.h  Ray.h  Scene.h  Sphere.h
include/accelerator/: Embree.h
include/core/: Camera.h  Denoiser.h  EnvironmentMap.h  HitRecord.h  Image.h  ImageFileLoader.h  PrintUtils.h  Ray.h  Scene.h
include/geometry/: Mesh.h  Sphere.h  Triangle.h
include/math/: Random.h  SpatialHash.h  Vec3.h
include/render/: AdaptiveSampler.h  CostTracker.h  MaterialCostTracker.h  WavefrontRenderer.h
include/scene/: CameraLoader.h  CornellBox.h  JsonSceneLoader.h  SceneGenerator.h  UsdSceneLoader.h
include/scene_io/: CornellBox.h
include/scheduling/: RayQueue.h  ShadingQueue.h
include/shading/: MIS.h  Material.h  Texture.h
output/: cornell_box.ppm  render.ppm
results/: bvhStatsCornellBox.txt
scenes/: cornellBox.usda  cornellBoxDragon.usda  cornell_box.json  cornell_box.usda  firstScene.usda  kitchenSet.usda
scenes/cameras/: cornellBoxCamera.usda  firstSceneCamera.usda  kitchenSetCamera.usda
scenes/objects/: teapot.usda
scripts/: constants.py  generate_stress_scenes.py  generate_uvs.py
scripts/utils/: cornell_reference.py  geometry.py  materials.py  textures.py  usd_materials.py
src/: main.cpp
src/accelerator/: Embree.cpp
src/core/: Denoiser.cpp  EnvironmentMap.cpp  Image.cpp  ImageFileLoader.cpp  Scene.cpp
src/geometry/: Mesh.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/render/: WavefrontRenderer.cpp
src/scene/: CameraLoader.cpp  CornellBox.cpp  UsdSceneLoader.cpp
src/shading/: Material.cpp  Texture.cpp
tests/accelerator/: EmbreeTest.cpp
tests/core/: EnvironmentMapTest.cpp  ImageFileLoaderTest.cpp  RayTest.cpp  SceneTest.cpp
tests/geometry/: SphereTest.cpp  TriangleTest.cpp
tests/math/: Vec3Test.cpp
tests/render/: AdaptiveSamplerTest.cpp  CostTrackerTest.cpp  MaterialCostTrackerTest.cpp  WavefrontRendererTest.cpp
tests/scene/: UsdLuxLightTest.cpp  UsdSceneLoaderTest.cpp
tests/scheduling/: RayQueueTest.cpp  ShadingQueueTest.cpp
tests/shading/: MaterialFeaturesTest.cpp  MaterialTest.cpp  TextureTest.cpp
tools/: main.py  usd_to_json.py  window.py
tools/render/: display.py
