[project]
name = "wavefront-renderer"
version = "0.1.0"
description = "Adaptive Scheduling for Coherent Wavefront Rendering - MSc thesis tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "usd-core>=26.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"