[project]
name = "wavefront-renderer"
version = "0.1.0"
description = "Adaptive Scheduling for Coherent Wavefront Rendering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7.0",
    "PyOpenGL>=3.1.7",
    "numpy>=2.0.0",
    "openimageio>=2.5.0",
]

[dependency-groups]
dev = [
    "clang-format>=22.1.5",
    "ruff>=0.15.20",
]
